# SVK_comparisons

./: .gitignore  .~lock.446_arian_adam_ott.odt#  446_arian_adam_ott.odt  run_benches.sh  runall.sh
bfs/: Cargo.toml  out_python_oneshot.txt  out_python_pytest.txt  out_rust_criterion.txt  out_rust_oneshot.txt  py_impl.py  test_py.py
bfs/benches/: bfs_bench.rs  graph_gen_bench.rs
bfs/src/: graph.rs  main.rs
map_reduce/: .gitignore  Cargo.toml  nohup.out  out_python_oneshot.txt  out_python_pytest.txt  out_rust_criterion.txt  out_rust_oneshot.txt  py_impl.py  test_py.py
map_reduce/benches/: map_reduce_bench.rs  map_reduce_bench_rayon.rs
map_reduce/src/: main.rs
matmul/: .gitignore  Cargo.toml  out_python_oneshot.txt  out_python_pytest.txt  out_rust_criterion.txt  out_rust_oneshot.txt  py_impl.py  py_test_matmul.py  test_py.py
matmul/benches/: matmul_naive_rayon_bench.rs  matmul_naive_seq_bench.rs
matmul/src/: main.rs
monte_carlo/: Cargo.toml  out_python_oneshot.txt  out_python_pytest.txt  out_rust_criterion.txt  out_rust_oneshot.txt  py_impl.py  test_py.py
monte_carlo/benches/: mc_test.rs
monte_carlo/src/: main.rs
quicksort/: .gitignore  Cargo.toml  out_python_oneshot.txt  out_python_pytest.txt  out_rust_criterion.txt  out_rust_oneshot.txt  py_impl.py  test_py.py
quicksort/benches/: quicksort_bench.rs
quicksort/src/: main.rs
