[package]
name = "matmul"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "matmul_naive_seq_bench"
harness = false

[[bench]]
name = "matmul_naive_rayon_bench"
harness = false

[dependencies]
rayon = "1.11.0"
ndarray = {version = "0.17.1", features=["rayon"]}
fastrand = "2.3.0"
